конактинация в bundle js

--- a/template.html
+++ b/template.html
@@ -7,10 +7,8 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body>
-    <script src="blocks/header/header__toggler/header__toggler.js"></script>
     <script src="js/jquery-3.3.1.js"></script>
     <script src="js/OwlCarousel2-2.3.4/dist/owl.carousel.min.js"></script>
-    <script src="blocks/slider/setupSlider.js"></script>
-    <script src="blocks/finance/finance__date/finance__date.js"></script>
+    <script src="js/bundle.js"></script>
   </body>
 </html>
