сетка готова под все, кроме мобилок

--- a/index.html
+++ b/index.html
@@ -352,6 +352,13 @@
             </div>
           </div>
         </div>
+        <div class="grid">
+          <div class="grid__transfer"></div>
+          <div class="grid__money-market"></div>
+          <div class="grid__money-protection"></div>
+          <div class="grid__remote-card"></div>
+          <div class="grid__card-mastercard"></div>
+        </div>
       </div>
     </div>
     <script src="js/jquery-3.3.1.js"></script>
