сделал сетку и слайдер полностью

--- a/index.html
+++ b/index.html
@@ -352,8 +352,8 @@
             </div>
           </div>
         </div>
+        <div class="transfer"></div>
         <div class="grid">
-          <div class="grid__transfer"></div>
           <div class="grid__money-market"></div>
           <div class="grid__money-protection"></div>
           <div class="grid__remote-card"></div>
