добавил контент в блок про переводы с карты на карту

--- a/index.html
+++ b/index.html
@@ -352,7 +352,10 @@
             </div>
           </div>
         </div>
-        <div class="transfer"></div>
+        <div class="transfer">
+          <h6>Переводите с карты на карту</h6>
+          <p>Быстрый и удобный способ перевести денежные средства. Узнайте о <span class="deep-blue">лимитах и комиссиях </span></p><a class="btn" href="#!">Перевести</a><img class="transfer__image_1920" src="media/Mockup1920.png" alt="Изображение карт" title="Переводы"><img class="transfer__image" src="media/Mockup.png" alt="Изображение карт" title="Переводы">
+        </div>
         <div class="grid">
           <div class="grid__money-market"></div>
           <div class="grid__money-protection"></div>
