закончил блоки сеткой, нужно будет подогнать по PP

--- a/index.html
+++ b/index.html
@@ -353,14 +353,26 @@
           </div>
         </div>
         <div class="transfer">
-          <h6>Переводите с карты на карту</h6>
-          <p>Быстрый и удобный способ перевести денежные средства. Узнайте о <span class="deep-blue">лимитах и комиссиях </span></p><a class="btn" href="#!">Перевести</a><img class="transfer__image_1920" src="media/Mockup1920.png" alt="Изображение карт" title="Переводы"><img class="transfer__image" src="media/Mockup.png" alt="Изображение карт" title="Переводы">
+          <h6 class="grid__card-title">Переводите с карты на карту</h6>
+          <p class="grid__card-text">Быстрый и удобный способ перевести денежные средства. Узнайте о <span class="deep-blue">лимитах и комиссиях </span></p><a class="btn" href="#!">Перевести</a><img class="transfer__image_1920" src="media/Mockup1920.png" alt="Изображение карт" title="Переводы"><img class="transfer__image" src="media/Mockup.png" alt="Изображение карт" title="Переводы">
         </div>
         <div class="grid">
-          <div class="grid__money-market"></div>
-          <div class="grid__money-protection"></div>
-          <div class="grid__remote-card"></div>
-          <div class="grid__card-mastercard"></div>
+          <div class="grid__money-market">
+            <h6 class="grid__card-title">Прямой доступ на валютный рынок</h6>
+            <p class="grid__card-text">Зарабатывайте на колебаниях курсов мировых валют</p><img class="grid__image" src="media/phone.png" alt="" title="Валютный рынок">
+          </div>
+          <div class="grid__money-protection">
+            <h6 class="grid__card-title">Защитные признаки банкнот Банка России</h6>
+            <p class="grid__card-text">Признаки подлинности, контролируемые с использованием х8-х10 лупы</p><img class="grid__image" src="media/column.png" alt="" title="Защита банкнот(бумажных деняк)">
+          </div>
+          <div class="grid__remote-card">
+            <h6 class="grid__card-title">До +0,5% годовых при дистанционном оформлении</h6>
+            <p class="grid__card-text">Начался прием карт МИР по выдаче наличных в сети банкоматов и дополнительных офисов.</p><img class="grid__image" src="media/girl.png" alt="" title="Какая-то женщина на этой странице">
+          </div>
+          <div class="grid__card-mastercard">
+            <h6 class="grid__card-title">Бесконтактная карта MasterCard</h6>
+            <p class="grid__card-text">Вы можете гораздо быстрее произвести оплату на АЗС, парковке, в кафе или в магазине одним касанием!</p><img class="grid__image" src="media/rock.png" alt="" title="Дуэйн, ты?">
+          </div>
         </div>
       </div>
     </div>
