блок новостей готов, нужно поправить по PP

--- a/index.html
+++ b/index.html
@@ -374,6 +374,22 @@
             <p class="grid__card-text">Вы можете гораздо быстрее произвести оплату на АЗС, парковке, в кафе или в магазине одним касанием!</p><img class="grid__image" src="media/rock.png" alt="" title="Дуэйн, ты?">
           </div>
         </div>
+        <div class="news">
+          <div class="news__header">
+            <div class="news__title">Новости</div><a class="news__link" href="#!">Архив новостей</a>
+          </div>
+          <div class="news__content">
+            <div class="news__block">
+              <div class="news__date">26 июня 2019 года</div><a class="news__text-title" href="#!">Предварительные выводы неутешительны: курс на социально-ориентированный национальный проект</a>
+            </div>
+            <div class="news__block">
+              <div class="news__date">25 июня 2019 года</div><a class="news__text-title" href="#!">Предварительные выводы неутешительны: курс на социально-ориентированный национальный проект</a>
+            </div>
+            <div class="news__block">
+              <div class="news__date">26 апреля 2019 года</div><a class="news__text-title" href="#!">Предварительные выводы неутешительны: курс на социально-ориентированный национальный проект</a>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
     <script src="js/jquery-3.3.1.js"></script>
