осталось сделать футер под мобилки и подровнять по pp

--- a/index.html
+++ b/index.html
@@ -392,6 +392,55 @@
         </div>
       </div>
     </div>
+    <div class="flex-container footer">
+      <div class="main-container">
+        <div class="footer__lists">
+          <ul class="footer__list">
+            <li class="footer__list-item-dropdown">Раскрытие информации
+              <ul class="footer__dropdown-list-1">
+                <li class="footer__list-item"> <a href="#!">Реквизиты</a></li>
+                <li class="footer__list-item"> <a href="#!">Раскрытие информации</a></li>
+                <li class="footer__list-item"> <a href="#!">Процентные ставки по вкладам физ. лиц</a></li>
+                <li class="footer__list-item"> <a href="#!">Список лиц, под контролем либо значительным влиянием которых находится Банк</a></li>
+              </ul>
+            </li>
+          </ul>
+          <ul class="footer__list">
+            <li class="footer__list-item-dropdown">Частым клиентам
+              <ul class="footer__dropdown-list-2">
+                <li class="footer__list-item"> <a href="#!">Банковские карты</a></li>
+                <li class="footer__list-item"> <a href="#!">Вклады</a></li>
+                <li class="footer__list-item"> <a href="#!">Тарифы</a></li>
+                <li class="footer__list-item"> <a href="#!">Защитные признаки банкнот Банка России</a></li>
+              </ul>
+            </li>
+          </ul>
+          <ul class="footer__list">
+            <li class="footer__list-item-dropdown">Корпоративным клиентам
+              <ul class="footer__dropdown-list-3">
+                <li class="footer__list-item"> <a href="#!">Как стать клиентом</a></li>
+                <li class="footer__list-item"> <a href="#!">Кредитование</a></li>
+                <li class="footer__list-item"> <a href="#!">Интернет-банк</a></li>
+              </ul>
+            </li>
+          </ul>
+          <ul class="footer__list">
+            <li class="footer__list-item-dropdown">Услуги РЦБ
+              <ul class="footer__dropdown-list-4">
+                <li class="footer__list-item"> <a href="#!">Доступ на валютный рынок</a></li>
+                <li class="footer__list-item"> <a href="#!">Брокерское обслуживание</a></li>
+                <li class="footer__list-item"> <a href="#!">Открыть брокерский счет</a></li>
+                <li class="footer__list-item"> <a href="#!">Еврооблигации</a></li>
+                <li class="footer__list-item"> <a href="#!">Торговля на ММВБ</a></li>
+                <li class="footer__list-item"> <a href="#!">Облигации</a></li>
+                <li class="footer__list-item"> <a href="#!">QUIK трейдинг</a></li>
+                <li class="footer__list-item"> <a href="#!">Transaq</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
     <script src="js/jquery-3.3.1.js"></script>
     <script src="js/OwlCarousel2-2.3.4/dist/owl.carousel.min.js"></script>
     <script src="js/bundle.js"></script>
