мобилка почти готова

--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
       <div class="main-container">
         <div class="footer__lists">
           <ul class="footer__list">
-            <li class="footer__list-item-dropdown">Раскрытие информации
+            <li class="footer__list-item-dropdown"><span class="footer__list-item-dropdown-1">О банке</span>
               <ul class="footer__dropdown-list-1">
                 <li class="footer__list-item"> <a href="#!">Реквизиты</a></li>
                 <li class="footer__list-item"> <a href="#!">Раскрытие информации</a></li>
@@ -406,7 +406,7 @@
             </li>
           </ul>
           <ul class="footer__list">
-            <li class="footer__list-item-dropdown">Частым клиентам
+            <li class="footer__list-item-dropdown footer__list-item-dropdown-2">Частым клиентам
               <ul class="footer__dropdown-list-2">
                 <li class="footer__list-item"> <a href="#!">Банковские карты</a></li>
                 <li class="footer__list-item"> <a href="#!">Вклады</a></li>
@@ -416,7 +416,7 @@
             </li>
           </ul>
           <ul class="footer__list">
-            <li class="footer__list-item-dropdown">Корпоративным клиентам
+            <li class="footer__list-item-dropdown footer__list-item-dropdown-3">Корпоративным клиентам
               <ul class="footer__dropdown-list-3">
                 <li class="footer__list-item"> <a href="#!">Как стать клиентом</a></li>
                 <li class="footer__list-item"> <a href="#!">Кредитование</a></li>
@@ -425,7 +425,7 @@
             </li>
           </ul>
           <ul class="footer__list">
-            <li class="footer__list-item-dropdown">Услуги РЦБ
+            <li class="footer__list-item-dropdown footer__list-item-dropdown-4">Услуги РЦБ
               <ul class="footer__dropdown-list-4">
                 <li class="footer__list-item"> <a href="#!">Доступ на валютный рынок</a></li>
                 <li class="footer__list-item"> <a href="#!">Брокерское обслуживание</a></li>
