--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
       </div>
     </div>
     <div class="flex-container footer">
-      <div class="main-container">
+      <div class="main-container footer_container">
         <div class="footer__lists">
           <ul class="footer__list">
             <li class="footer__list-item-dropdown"><span class="footer__list-item-dropdown-1">О банке</span>
@@ -406,7 +406,7 @@
             </li>
           </ul>
           <ul class="footer__list">
-            <li class="footer__list-item-dropdown footer__list-item-dropdown-2">Частым клиентам
+            <li class="footer__list-item-dropdown"><span class="footer__list-item-dropdown-2">Частым клиентам</span>
               <ul class="footer__dropdown-list-2">
                 <li class="footer__list-item"> <a href="#!">Банковские карты</a></li>
                 <li class="footer__list-item"> <a href="#!">Вклады</a></li>
@@ -416,7 +416,7 @@
             </li>
           </ul>
           <ul class="footer__list">
-            <li class="footer__list-item-dropdown footer__list-item-dropdown-3">Корпоративным клиентам
+            <li class="footer__list-item-dropdown"><span class="footer__list-item-dropdown-3">Корпоративным клиентам</span>
               <ul class="footer__dropdown-list-3">
                 <li class="footer__list-item"> <a href="#!">Как стать клиентом</a></li>
                 <li class="footer__list-item"> <a href="#!">Кредитование</a></li>
@@ -425,7 +425,7 @@
             </li>
           </ul>
           <ul class="footer__list">
-            <li class="footer__list-item-dropdown footer__list-item-dropdown-4">Услуги РЦБ
+            <li class="footer__list-item-dropdown"><span class="footer__list-item-dropdown-4">Услуги РЦБ</span>
               <ul class="footer__dropdown-list-4">
                 <li class="footer__list-item"> <a href="#!">Доступ на валютный рынок</a></li>
                 <li class="footer__list-item"> <a href="#!">Брокерское обслуживание</a></li>
