--- a/index.html
+++ b/index.html
@@ -211,9 +211,7 @@
         <div class="slider__content">
           <div class="slider__title">Центр для успешных инвестиций</div>
           <div class="slider__text">Вы сможете выплатить банковский долг, даже в случае неблагоприятных жизненных обстоятельств.</div>
-          <div class="slider__btn">
-            <div class="btn"> <a href="#!">Подать заявку</a></div>
-          </div>
+          <div class="slider__btn"><a class="btn" href="#!"> Подать заявку</a></div>
         </div>
         <div class="slider__image"><img src="media/sliderMan.png" alt="image"></div>
       </div>
@@ -221,9 +219,7 @@
         <div class="slider__content">
           <div class="slider__title">Центр для успешных инвестиций 2</div>
           <div class="slider__text">Прямой доступ на валютный рынок. Зарабатывайте на колебаниях курсов мировых валют</div>
-          <div class="slider__btn">
-            <div class="btn">Подать заявку</div>
-          </div>
+          <div class="slider__btn"><a class="btn" href="#!">Подать заявку</a></div>
         </div>
         <div class="slider__image"><img src="media/sliderMan.png" alt="image"></div>
       </div>
@@ -231,9 +227,7 @@
         <div class="slider__content">
           <div class="slider__title">Центр для успешных инвестиций 3</div>
           <div class="slider__text">Вы сможете выплатить банковский долг, даже в случае неблагоприятных жизненных обстоятельств.</div>
-          <div class="slider__btn">
-            <div class="btn"> <a href="#!">Подать заявку</a></div>
-          </div>
+          <div class="slider__btn"><a class="btn" href="#!">Подать заявку</a></div>
         </div>
         <div class="slider__image"><img src="media/sliderMan.png" alt="image"></div>
       </div>
